--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3672">
-	<link rel="stylesheet" type="text/css" href="style.css?4454">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6041">
+	<link rel="stylesheet" type="text/css" href="style.css?7315">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -145,7 +145,7 @@
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style ">
+						<p class="text-lg-center text-center p-bloc-2-style">
 							Ryan Gaudion<br />Side Projects<br>and skill your sharing<br><strong>19/10/2023</strong><br>
 						</p><a href="19th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
@@ -216,8 +216,15 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black" id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
+		<div class="row">
+			<div class="col-12">
+				<p class="text-lg-center p-bloc-33-style mg-lg">
+					Computing | Science &amp; Engineering at Solent University.
+				</p>
+			</div>
+		</div>
 		<div class="row">
 			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
 				<div class="text-center">
@@ -255,9 +262,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?6104"></script>
-<script src="./js/bootstrap.bundle.min.js?4495"></script>
-<script src="./js/blocs.min.js?2804"></script>
+<script src="./js/jquery.min.js?8611"></script>
+<script src="./js/bootstrap.bundle.min.js?634"></script>
+<script src="./js/blocs.min.js?1052"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
