--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1529">
-	<link rel="stylesheet" type="text/css" href="style.css?6459">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8546">
+	<link rel="stylesheet" type="text/css" href="style.css?3563">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Contact</title>
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 		<div class="row voffset-xs">
-			<div class="col-md-6 col-lg-4 offset-lg-2">
+			<div class="col-md-6 offset-lg-2 col-lg-8">
 				<img src="img/lazyload-ph.png" data-src="img/APaFdH4r_400x400.jpg" class="img-fluid rounded-circle mx-auto d-block img-15-style lazyload" alt="APaFdH4r_400x400" />
 				<h2 class="mg-md text-lg-center tc-black text-center">
 					Martin Reid
@@ -136,10 +136,10 @@
 				<p class="text-lg-center text-center">
 					martin.reid@solent.ac.uk
 				</p>
-				<div class="row">
+				<div class="row voffset-lg ">
 					<div class="col col-lg-4">
 						<div class="text-center">
-							<a href="https://twitter.com/martinGreid"><span class="icon-md fab fa-twitter-square"></span></a>
+							<a href="https://twitter.com/webDevSolent"><span class="icon-md fab fa-twitter-square"></span></a>
 						</div>
 					</div>
 					<div class="col">
@@ -165,8 +165,15 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black" id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
+		<div class="row">
+			<div class="col-12">
+				<p class="text-lg-center p-bloc-33-style mg-lg">
+					Computing | Science &amp; Engineering at Solent University.
+				</p>
+			</div>
+		</div>
 		<div class="row">
 			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
 				<div class="text-center">
@@ -204,9 +211,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9617"></script>
-<script src="./js/bootstrap.bundle.min.js?7667"></script>
-<script src="./js/blocs.min.js?6899"></script>
+<script src="./js/jquery.min.js?242"></script>
+<script src="./js/bootstrap.bundle.min.js?7773"></script>
+<script src="./js/blocs.min.js?9282"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
