--- a/2022-23.html
+++ b/2022-23.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3714">
-	<link rel="stylesheet" type="text/css" href="style.css?3428">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?168">
+	<link rel="stylesheet" type="text/css" href="style.css?2398">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home-1</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -217,8 +217,15 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black" id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
+		<div class="row">
+			<div class="col-12">
+				<p class="text-lg-center p-bloc-33-style mg-lg">
+					Computing | Science &amp; Engineering at Solent University.
+				</p>
+			</div>
+		</div>
 		<div class="row">
 			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
 				<div class="text-center">
@@ -256,9 +263,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9617"></script>
-<script src="./js/bootstrap.bundle.min.js?7667"></script>
-<script src="./js/blocs.min.js?6899"></script>
+<script src="./js/jquery.min.js?9681"></script>
+<script src="./js/bootstrap.bundle.min.js?8369"></script>
+<script src="./js/blocs.min.js?8187"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
