--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7120">
-	<link rel="stylesheet" type="text/css" href="style.css?6730">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8819">
+	<link rel="stylesheet" type="text/css" href="style.css?8723">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th Oct 2023</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc" id="bloc-0">
+<div class="bloc none l-bloc " id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -119,6 +119,23 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-32 -->
+<div class="bloc tc-black-2" id="bloc-32">
+	<div class="container bloc-lg">
+		<div class="row">
+			<div class="col text-md-left text-center">
+				<h1 class="mg-md tc-black-2">
+					Thursday 19th October 2023 17:00-18:00
+				</h1>
+				<p class="p-31049-style">
+					This week we will be covering side projects, sharing your skills, community-based learning and building social and professional capital.<br><br>We are pleased to have two speakers Ryan Gaudion who is one of our BSc Digital and Technology Solutions Degree Apprenticeship (Software Engineering) here at Solent University and <a href="https://www.linkedin.com/in/annawerno/">Anna Werno</a>&nbsp;from codebar Southampton.<br>
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-32 END -->
+
+<!-- bloc-32 -->
 <div class="bloc tc-black none" id="bloc-32">
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row voffset-md">
@@ -130,9 +147,6 @@
 						</h3><img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto d-block lazyload" alt="ryan" />
 					</div>
 					<div class="card-body">
-						<h2 class="h2-28-style">
-							Thursday 19th October 2023 17:00-18:00 – Palmerston Lecture Theatre
-						</h2>
 						<p class="p-102-style text-left">
 							<br>Meet <a href="https://www.linkedin.com/in/ryan-gaudion/">Ryan Gaudion</a>, a software developer with four years of experience at <a href="https://www.lockheedmartin.com/">Lockheed Martin</a>. Ryan&rsquo;s educational journey continued at <a href="https://www.solent.ac.uk/">Solent University</a> where he completed his <a href="https://www.solent.ac.uk/courses/apprenticeships/digital-and-technology-solutions-professional-integrated-degree-apprenticeship">BSc Digital Technology Solutions Degree Apprenticeship</a> in 2023. In his spare time, Ryan works on many “side-projects” as well as <a class="link-0-style" href="https://www.youtube.com/c/RyanGaudion">sharing his passion for STEM</a> topics both online as well as at local schools.<br><br><a href="https://github.com/RyanGaudion/">github.com/RyanGaudion/</a><br><br>
 						</p><img src="img/lazyload-ph.png" data-src="img/ryan_YT.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT" />
@@ -147,14 +161,44 @@
 </div>
 <!-- bloc-32 END -->
 
+<!-- bloc-34 -->
+<div class="bloc tc-black none" id="bloc-34">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset-md">
+			<div class="col text-md-left text-center">
+				<div class="card">
+					<div class="card-header">
+						<h3 class="mg-clear">
+							Anna Werno
+						</h3><img src="img/lazyload-ph.png" data-src="img/anna_code_bar.jpeg" class="img-fluid mx-auto d-block lazyload" alt="ryan" />
+					</div>
+					<div class="card-body">
+						<p class="p-102-style text-left">
+							Meet <a href="https://www.linkedin.com/in/annawerno/">Anna</a>, one of <a href="https://codebar.io/southampton">codebar Southampton's</a> organisers, speaking about how codebar impacted her journey into tech and how you can get involved with building a safe and supportive community to your local area.<br><br><a href="https://codebar.io/">codebar</a> is a charity that facilitates the growth of a diverse tech community by running free programming workshops and events for underrepresented group members in tech. Their mission is to make technology accessible to everyone and to help bridge the digital divide.<br><br>codebar consists of many different chapters around the world and a <a href="https://codebar.io/southampton">Southampton chapter</a> has recently joined the codebar family.<br><br><a href="https://codebar.io/southampton">codebar.io/southampton</a> <br><br>
+						</p><img src="img/lazyload-ph.png" data-src="img/bg_Logo.png" class="img-fluid mx-auto d-block lazyload" alt="ryan_YT" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-34 END -->
+
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
 <!-- ScrollToTop Button END-->
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black" id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
+		<div class="row">
+			<div class="col-12">
+				<p class="text-lg-center p-bloc-33-style mg-lg">
+					Computing | Science &amp; Engineering at Solent University.
+				</p>
+			</div>
+		</div>
 		<div class="row">
 			<div class="offset-md-2 col-6 col-md-2 col-sm-3 col-lg-1 offset-lg-4">
 				<div class="text-center">
@@ -192,9 +236,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9617"></script>
-<script src="./js/bootstrap.bundle.min.js?7667"></script>
-<script src="./js/blocs.min.js?6899"></script>
+<script src="./js/jquery.min.js?9681"></script>
+<script src="./js/bootstrap.bundle.min.js?8369"></script>
+<script src="./js/blocs.min.js?8187"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
