--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6041">
-	<link rel="stylesheet" type="text/css" href="style.css?7315">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2336">
+	<link rel="stylesheet" type="text/css" href="style.css?6744">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -143,10 +143,10 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/ryan.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/HH_Oct_19_2023.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
-							Ryan Gaudion<br />Side Projects<br>and skill your sharing<br><strong>19/10/2023</strong><br>
+							Ryan Gaudion &amp;&nbsp;Anna Werno<br />Side Projects<br>&amp; sharing your skills<br><strong>19/10/2023</strong><br>
 						</p><a href="19th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
@@ -262,9 +262,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?8611"></script>
-<script src="./js/bootstrap.bundle.min.js?634"></script>
-<script src="./js/blocs.min.js?1052"></script>
+<script src="./js/jquery.min.js?9681"></script>
+<script src="./js/bootstrap.bundle.min.js?8369"></script>
+<script src="./js/blocs.min.js?8187"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
