--- a/19th-oct-2023.html
+++ b/19th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8819">
-	<link rel="stylesheet" type="text/css" href="style.css?8723">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6393">
+	<link rel="stylesheet" type="text/css" href="style.css?1685">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>19th Oct 2023</title>
@@ -123,11 +123,11 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col text-md-left text-center">
-				<h1 class="mg-md tc-black-2">
-					Thursday 19th October 2023 17:00-18:00
+				<h1 class="tc-black-2 mg-md">
+					Thursday 19th October 2023 17:00-18:00<br>Palmerston Lecture Theatre<br>
 				</h1>
-				<p class="p-31049-style">
-					This week we will be covering side projects, sharing your skills, community-based learning and building social and professional capital.<br><br>We are pleased to have two speakers Ryan Gaudion who is one of our BSc Digital and Technology Solutions Degree Apprenticeship (Software Engineering) here at Solent University and <a href="https://www.linkedin.com/in/annawerno/">Anna Werno</a>&nbsp;from codebar Southampton.<br>
+				<p class="p-31049-style mg-clear">
+					This week we will be covering side projects, sharing your skills, community-based learning and building social and professional capital.<br><br>We are pleased to have two speakers Ryan Gaudion who is one of our BSc Digital and Technology Solutions Degree Apprenticeship (Software Engineering) here at Solent University and <a href="https://www.linkedin.com/in/annawerno/">Anna Werno</a> from codebar Southampton.<br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map for Room Location</a><br>
 				</p>
 			</div>
 		</div>
@@ -236,9 +236,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9681"></script>
-<script src="./js/bootstrap.bundle.min.js?8369"></script>
-<script src="./js/blocs.min.js?8187"></script>
+<script src="./js/jquery.min.js?8730"></script>
+<script src="./js/bootstrap.bundle.min.js?6372"></script>
+<script src="./js/blocs.min.js?663"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
