fixed image loss 5-oct

--- a/5th-oct-2023.html
+++ b/5th-oct-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7242">
-	<link rel="stylesheet" type="text/css" href="style.css?3452">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?787">
+	<link rel="stylesheet" type="text/css" href="style.css?8317">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Juniper Networks</title>
@@ -32,7 +32,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -119,13 +119,13 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-29 -->
-<div class="bloc tc-black-2" id="bloc-29">
+<div class="bloc tc-black-2 " id="bloc-29">
 	<div class="container bloc-sm-lg bloc-sm">
 		<div class="row">
 			<div class="col text-md-left text-center">
 				<h1 class="tc-black-2 mg-sm h1-bloc-29-style">
 					Juniper Networks
-				</h1><img src="img/lazyload-ph.png" data-src="img/HH_juniper.jpg" class="img-fluid mx-auto d-block lazyload" alt="HH_juniper" />
+				</h1><img src="img/lazyload-ph.png" data-src="img/HH_juniper_v2.png" class="img-fluid mx-auto d-block img-style lazyload" alt="HH_juniper" />
 				<p class="p-bloc-29-style">
 					From Left to right:&nbsp;Chris Howarth, Ben Peckham &amp;&nbsp;Ian Jarrett
 				</p>
@@ -241,9 +241,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9681"></script>
-<script src="./js/bootstrap.bundle.min.js?8369"></script>
-<script src="./js/blocs.min.js?8187"></script>
+<script src="./js/jquery.min.js?3115"></script>
+<script src="./js/bootstrap.bundle.min.js?1796"></script>
+<script src="./js/blocs.min.js?9208"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
