--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2336">
-	<link rel="stylesheet" type="text/css" href="style.css?6744">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7918">
+	<link rel="stylesheet" type="text/css" href="style.css?3438">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -45,54 +45,57 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link  ltc-black">Home</a>
+										<a href="index.html" class="nav-link">Home</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link  ltc-black">About</a>
+										<a href="about.html" class="nav-link">About</a>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
+													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
 												</li>
 												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
+													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
+													<a href="2022-23.html" class="nav-link">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
+													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
+													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
+										<a href="podcast.html" class="nav-link">Podcast</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
+										<a href="contact.html" class="nav-link">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -151,13 +154,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/adam_don_2-11-23.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
-							<strong>TBC</strong><br>TBC&nbsp;<br>TBC<br><strong>23/3/2023</strong><br>
-						</p><a href="#" class="btn btn-style btn-ferrari-red btn-block">Event 3 register</a>
+							Adam Chu &amp;&nbsp;Dominik Romanek <br>Getting your first job<br><strong>2/11/2023</strong><br>
+						</p><a href="2nd-nov-2023.html" class="btn btn-style btn-ferrari-red btn-block">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -262,9 +265,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9681"></script>
-<script src="./js/bootstrap.bundle.min.js?8369"></script>
-<script src="./js/blocs.min.js?8187"></script>
+<script src="./js/jquery.min.js?5182"></script>
+<script src="./js/bootstrap.bundle.min.js?2204"></script>
+<script src="./js/blocs.min.js?6373"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
