--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7918">
-	<link rel="stylesheet" type="text/css" href="style.css?3438">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4495">
+	<link rel="stylesheet" type="text/css" href="style.css?3615">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -55,7 +55,10 @@
 											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link">5th Oct 2023</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
+												</li>
+												<li class="nav-item">
+													<a href="16th-nov-2023.html" class="nav-link a-btn">16th Nov 2023</a>
 												</li>
 												<li class="nav-item">
 													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
@@ -164,25 +167,25 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
-							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/288424323917" class="btn btn-block btn-ferrari-red">Event 3 register</a>
+							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
+						</p><a href="16th-nov-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row voffset-md object-hidden">
+		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/james_whale.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/289271467747" class="btn btn-block btn-ferrari-red">Event 4 register</a>
+							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
+						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -219,7 +222,7 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black tc-white" id="bloc-33">
+<div class="bloc bgc-black tc-white " id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
 		<div class="row">
 			<div class="col-12">
@@ -265,9 +268,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?5182"></script>
-<script src="./js/bootstrap.bundle.min.js?2204"></script>
-<script src="./js/blocs.min.js?6373"></script>
+<script src="./js/jquery.min.js?9663"></script>
+<script src="./js/bootstrap.bundle.min.js?9892"></script>
+<script src="./js/blocs.min.js?2872"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
