--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4495">
-	<link rel="stylesheet" type="text/css" href="style.css?3615">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2153">
+	<link rel="stylesheet" type="text/css" href="style.css?828">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -189,7 +189,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
+			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
@@ -199,9 +199,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
+			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload " alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -222,7 +222,7 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black tc-white " id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
 		<div class="row">
 			<div class="col-12">
@@ -268,9 +268,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9663"></script>
-<script src="./js/bootstrap.bundle.min.js?9892"></script>
-<script src="./js/blocs.min.js?2872"></script>
+<script src="./js/jquery.min.js?3257"></script>
+<script src="./js/bootstrap.bundle.min.js?6054"></script>
+<script src="./js/blocs.min.js?3880"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
