--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5360">
-	<link rel="stylesheet" type="text/css" href="style.css?2781">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6377">
+	<link rel="stylesheet" type="text/css" href="style.css?791">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none l-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
@@ -45,54 +45,60 @@
 							<div class="collapse navbar-collapse navbar-32798">
 								<ul class="site-navigation nav navbar-nav ml-auto">
 									<li class="nav-item">
-										<a href="index.html" class="nav-link  ltc-black">Home</a>
+										<a href="index.html" class="nav-link">Home</a>
 									</li>
 									<li class="nav-item">
-										<a href="about.html" class="nav-link  ltc-black">About</a>
+										<a href="about.html" class="nav-link">About</a>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Events</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Events</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="5th-oct-2023.html" class="nav-link  ltc-black">5th Oct 2023</a>
+													<a href="index.html" class="a-btn nav-link">New Link</a>
 												</li>
 												<li class="nav-item">
-													<a href="19th-oct-2023.html" class="nav-link  ltc-black">19th Oct 2023</a>
+													<a href="16th-nov-2023.html" class="nav-link a-btn">16th Nov 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="19th-oct-2023.html" class="nav-link">19th Oct 2023</a>
+												</li>
+												<li class="nav-item">
+													<a href="2nd-nov-2023.html" class="nav-link">2nd Nov 2023</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
 										<div class="dropdown btn-dropdown">
-											<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
 											<ul class="dropdown-menu" role="menu">
 												<li class="nav-item">
-													<a href="2022-23.html" class="nav-link  ltc-black">2022-23</a>
+													<a href="2022-23.html" class="nav-link">2022-23</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2022.html" class="nav-link  ltc-black">Spring 2022</a>
+													<a href="spring-2022.html" class="nav-link">Spring 2022</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2020.html" class="nav-link  ltc-black">Spring 2020</a>
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2019.html" class="nav-link  ltc-black">Spring 2019</a>
+													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2018.html" class="nav-link  ltc-black">Spring 2018</a>
+													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
 												</li>
 												<li class="nav-item">
-													<a href="spring-2017.html" class="nav-link  ltc-black">Spring 2017</a>
+													<a href="spring-2017.html" class="nav-link">Spring 2017</a>
 												</li>
 											</ul>
 										</div>
 									</li>
 									<li class="nav-item">
-										<a href="podcast.html" class="nav-link  ltc-black">Podcast</a>
+										<a href="podcast.html" class="nav-link">Podcast</a>
 									</li>
 									<li class="nav-item">
-										<a href="contact.html" class="nav-link  ltc-black">Contact</a>
+										<a href="contact.html" class="nav-link">Contact</a>
 									</li>
 								</ul>
 							</div>
@@ -129,7 +135,7 @@
 					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br>
 				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_MARCH_2022_WEB.jpg" class="img-fluid mx-auto d-block mg-md lazyload" alt="HAPPY_HOUR_MARCH_2022_WEB" />
 				<p class="p-style">
-					<br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br><br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map</a><br>
+					<br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity&nbsp;<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br><br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map</a><br>
 				</p>
 			</div>
 		</div>
@@ -138,8 +144,8 @@
 <!-- bloc-3 END -->
 
 <!-- bloc-4 -->
-<div class="bloc l-bloc" id="bloc-4">
-	<div class="container bloc-lg">
+<div class="bloc l-bloc " id="bloc-4">
+	<div class="container bloc-lg bloc-sm-lg">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
 				<div >
@@ -204,9 +210,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9681"></script>
-<script src="./js/bootstrap.bundle.min.js?8369"></script>
-<script src="./js/blocs.min.js?8187"></script>
+<script src="./js/jquery.min.js?8979"></script>
+<script src="./js/bootstrap.bundle.min.js?3486"></script>
+<script src="./js/blocs.min.js?6814"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
