--- a/16th-nov-2023.html
+++ b/16th-nov-2023.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9606">
-	<link rel="stylesheet" type="text/css" href="style.css?6715">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2537">
+	<link rel="stylesheet" type="text/css" href="style.css?3434">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>2nd-Nov-2023-1</title>
@@ -150,7 +150,7 @@
 					<div class="card-header">
 						<h3 class="mg-md">
 							Luke Searle - Learning Designer at University of Southampton
-						</h3><img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Adam" />
+						</h3><img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luke" />
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
@@ -170,7 +170,7 @@
 
 
 <!-- bloc-33 -->
-<div class="bloc bgc-black tc-white " id="bloc-33">
+<div class="bloc bgc-black tc-white" id="bloc-33">
 	<div class="container bloc-lg bloc-lg-lg">
 		<div class="row">
 			<div class="col-12">
@@ -216,9 +216,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9663"></script>
-<script src="./js/bootstrap.bundle.min.js?9892"></script>
-<script src="./js/blocs.min.js?2872"></script>
+<script src="./js/jquery.min.js?8979"></script>
+<script src="./js/bootstrap.bundle.min.js?3486"></script>
+<script src="./js/blocs.min.js?6814"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
