--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2153">
-	<link rel="stylesheet" type="text/css" href="style.css?828">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?298">
+	<link rel="stylesheet" type="text/css" href="style.css?4709">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -181,11 +181,11 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/james_whale.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
-						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
+						</p><a href="30th-nov-2023.html" class="btn btn-block btn-ferrari-red ">More Details</a>
 					</div>
 				</div>
 			</div>
@@ -201,7 +201,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload " alt="place_holder_face_2" />
+					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -268,9 +268,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3257"></script>
-<script src="./js/bootstrap.bundle.min.js?6054"></script>
-<script src="./js/blocs.min.js?3880"></script>
+<script src="./js/jquery.min.js?3723"></script>
+<script src="./js/bootstrap.bundle.min.js?6911"></script>
+<script src="./js/blocs.min.js?215"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
