--- a/7th-dec-2023.html
+++ b/7th-dec-2023.html
@@ -2,16 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="digital industry talks">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4780">
-	<link rel="stylesheet" type="text/css" href="style.css?1901">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9031">
+	<link rel="stylesheet" type="text/css" href="style.css?7852">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Home</title>
+    <title>30th-Nov-2023-1</title>
 
 
     
@@ -129,98 +130,48 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-2 -->
-<div class="bloc tc-black l-bloc" id="bloc-2">
+<!-- bloc-32 -->
+<div class="bloc tc-black-2" id="bloc-32">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col">
-				<h1 class="mg-md h3-style h1-style">
-					Happy Hour 2023-24
+			<div class="col text-md-left text-center">
+				<h1 class="tc-black-2 mg-md">
+					Thursday 7th December 2023 17:00-18:00<br>Palmerston Lecture Theatre<br>
 				</h1>
-				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks every other week in the first two semesters starting on 5th October 2023<br><br>
-				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" />
-			</div>
-		</div>
-		<div class="row voffset-lg">
-			<div class="align-self-center col-lg-3 col-md-6">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/354441808_10168317563430294_2330253690648159454_n.jpg" class="img-fluid mx-auto d-block lazyload" alt="Screenshot%202022 10-30%20at%2014.23.54" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Juniper Networks</strong><br>Placements, Getting Your <br>First Job &amp; Working in Tech<br><strong>5/10/2023</strong>
-						</p><a href="5th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/HH_Oct_19_2023.png" class="img-fluid mx-auto lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style">
-							Ryan Gaudion &amp;&nbsp;Anna Werno<br />Side Projects<br>&amp; sharing your skills<br><strong>19/10/2023</strong><br>
-						</p><a href="19th-oct-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/adam_don_2-11-23.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-3-style">
-							Adam Chu &amp;&nbsp;Dominik Romanek <br>Getting your first job<br><strong>2/11/2023</strong><br>
-						</p><a href="2nd-nov-2023.html" class="btn btn-style btn-ferrari-red btn-block">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
-				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-4-style">
-							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
-						</p><a href="16th-nov-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row voffset-md">
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
-						</p><a href="30th-nov-2023.html" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements &amp; First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
-						</p><a href="#" class="btn btn-block btn-ferrari-red">More Details</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="place_holder_face_2" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-1-style">
-							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/288075239797" class="btn btn-block btn-ferrari-red">Event 5 register</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
+				<p class="p-31049-style mg-clear">
+					This week we be hosting a discussion panel on work experience while studeying and getting your first job after graduation.<br><br><a href="https://github.com/martinsolent/solent_store/raw/main/docs/east-park-terrace-campus-map.pdf">Download Campus Map for Room Location</a>
+				</p>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-2 END -->
+<!-- bloc-32 END -->
+
+<!-- bloc-32 -->
+<div class="bloc tc-black none" id="bloc-32">
+	<div class="container bloc-no-padding-lg bloc-no-padding">
+		<div class="row voffset">
+			<div class="col text-md-left text-center">
+				<div class="card">
+					<div class="card-header">
+						<h3 class="mg-md">
+							Panel Discussion - Work Experience &amp; First Jobs
+						</h3><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block mg-lg lazyload" alt="Luke" />
+						<p class="mg-lg p-bloc-32-style">
+							(Clockwise from top left)&nbsp;<a href="https://www.linkedin.com/in/igor-a5015b174/">Igor Kanchukovskyi</a> 3rd year BSc Software Engineer, <a href="https://www.linkedin.com/in/airenbushby/">Airen Bushby</a> - BSc Cyber Security Management Graduate (Class 2022) - Junior Pre-Sales Consultant at <a href="https://www.linkedin.com/company/axiansuk/">Axians UK</a>, <a href="https://www.linkedin.com/in/william-tasker-b47530194/">Will Tasker</a> - BSc Software Engineer Graduate (Class 2022) - Graduate Software Engineer at <a href="https://www.linkedin.com/company/simplementary/">Simplementary</a> and Patrick West BSc Computing Graduate (Class 2020) - System Integration Manager at <a href="https://www.liteip.com/">LiteIP Ltd.</a><br>
+						</p>
+					</div>
+					<div class="card-body">
+						<p class="p-102-style text-left">
+							<br>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-32 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
